# KiMaster

./: .gitignore  BRIDGE_ARCHITECTURE.txt  BRIDGE_TRUST_FLOW.md  BRIDGE_UI_SUMMARY.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  headroom_memory.db  icon-preview.html  index.html  package-lock.json  package.json  test_pipeline.py  vite.config.js
.claude/: launch.json
bridge/: test_board_ops.py
bridge/kimaster_plugin/: BoardChangeWatcher.py  BoardExporter.py  KiMasterPlugin.py  SchematicExporter.py  SelectionWatcher.py  WsServer.py  __init__.py  metadata.json
bridge/kimaster_plugin/ops/: Panelize.py  Teardrops.py  ViaStitch.py  __init__.py
bridge/probe/: ProbeKiCadApi.py  debug_ws.py  test_exporter.py
docs/: FEATURES -V2.md  FEATURES.md
src/: main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/profiles/: global.json  jlcpcb.json  kimaster_universal.json  pcbway.json
src-tauri/scripts/: gen_icons.py
src-tauri/src/: AppConfig.rs  AppState.rs  main.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/crdt/: mod.rs
src-tauri/src/core/kicad/: mod.rs
src-tauri/src/core/math/: mod.rs
src-tauri/src/extensions/: mod.rs
src-tauri/src/ipc/: BridgeCommands.rs  CanvasCommands.rs  CliCommands.rs  ExportCommands.rs  ExportProfileCommands.rs  GitCommands.rs  IpcCommands.rs  NotesCommands.rs  Pcb3dCommands.rs  ProjectCommands.rs  UceCommands.rs  mod.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/bridge/: WsClient.rs  mod.rs
src-tauri/src/modules/canvas/: footprint.rs  mod.rs  sexpr.rs
src-tauri/src/modules/cli/: CliRunner.rs  DrcParser.rs  ErcParser.rs  ExportRunner.rs  mod.rs
src-tauri/src/modules/config/: mod.rs
src-tauri/src/modules/git/: GitRunner.rs  mod.rs
src-tauri/src/modules/kicad_ipc/: IpcClient.rs  KicadFileParser.rs  SchematicApi.rs  SexprParser.rs  mod.rs
src-tauri/src/modules/notes/: mod.rs
src-tauri/src/modules/project/: FileWatcher.rs  ProjectStore.rs  mod.rs
src-tauri/src/modules/uce/: EdaParser.rs  KiModGenerator.rs  KiSymGenerator.rs  LcscClient.rs  LibTableManager.rs  LibraryVault.rs  PostProcessor.rs  SanitizerRules.rs  VaultManager.rs  mod.rs
src/components/ui/: index.js
src/core/: AppCommands.js  AppEvents.js  AppKeys.js  Ipc.js  Logger.js  Notify.js  Router.js  State.js  omni-search.js
src/design/: reset.css  tokens.css  typography.css  views.css
src/design/animations/: Micro.js  Transitions.js  index.js
src/lib/kicanvas/: KiCanvasAdapter.js  VENDOR_VERSION.js
src/modules/board/: AlignService.js
src/modules/drc/: DrcService.js
src/modules/export/: ExportConfigDefaults.js  ExportProfileService.js
src/modules/fab/: FabRules.js
src/modules/kicad-bridge/: BridgeClient.js  IpcClient.js  PluginSlot.js
src/modules/live3d/: Live3DRenderer.js  PcbExporter.js  PcbMaterials.js  SharpenShader.js
src/modules/notes/: NotesService.js
src/modules/project/: ProjectService.js
src/modules/render/: KiCanvasView.js  Live3dService.js  (+1 more)
tests/: persistence.test.js
(+92 files in other folders)
